<resources>
    <string name="app_name">WhereToEat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Siko Mark</string>
    <string name="nav_header_subtitle">sikomark@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="splash_title">Where To Eat?</string>
    <string name="my_name">Designed by Sikó Márk Levente</string>
    <string name="rest_name">Name</string>
    <string name="rest_address">Address</string>
    <string name="rest_city">City</string>
    <string name="rest_state">State</string>
    <string name="rest_area">Area</string>
    <string name="rest_postalcode">Postalcode</string>
    <string name="rest_country">Country</string>
    <string name="rest_price">Price</string>
    <string name="rest_reserve_url">Reserve Url</string>
    <string name="rest_mobile_reserve">Mobile Reserve</string>
    <string name="login_motivation_text">Let\'s get some food!</string>
    <string name="hungry">I am hungry</string>
    <string name="example_mail">example@gmail.com</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Don\'t have an account?\nSign Up Here</string>
    <string name="example_name">Thomas Shelby</string>
    <string name="phone_nr">0713542143</string>
    <string name="sign_up_simple">Sign Up</string>
    <string name="search_by_name">Search by name</string>
</resources>