<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/nav_restaurants"
        android:name="com.example.wheretoeat.ui.restaurants.RestaurantFragment"
        android:label="@string/menu_restaurants"
        tools:layout="@layout/fragment_restaurants" >
        <action
            android:id="@+id/action_nav_restaurants_to_nav_favorites2"
            app:destination="@id/nav_favorites" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.wheretoeat.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_favorites2"
            app:destination="@id/nav_favorites" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.wheretoeat.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.wheretoeat.ui.details.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/details_fragment" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.wheretoeat.ui.login_register.RegisterFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_register">
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.wheretoeat.ui.login_register.LoginFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

</navigation>