<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#E2E2E2"
        android:layout_height="match_parent"
        tools:context="com.example.wheretoeat.ui.login_register.RegisterFragment">


        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="Let's get some food!"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" app:fontFamily="cursive"
                    android:textColor="#465A61"/>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="I am hungry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    app:fontFamily="casual" android:textStyle="bold" android:textAllCaps="false"
                    android:typeface="monospace" android:textColor="#969EEE"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:padding="18dp"
                android:background="#ffffff"
                android:layout_below="@id/linearLayout1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_name"
                    android:hint="@string/example_name"
                    android:inputType="text"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person" />

                <EditText
                    android:id="@+id/user_email"
                    android:hint="@string/example_mail"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email" />

                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/user_adress"
                    android:inputType="textPostalAddress"
                    android:hint="@string/rest_address"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_location" />

                <EditText
                    android:id="@+id/user_phone"
                    android:hint="@string/phone_nr"
                    android:inputType="phone"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_phone" />


                <Button
                    android:id="@+id/finish_registration"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:text="@string/sign_up_simple"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>




