<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".ui.details.DetailsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/r_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/rest_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/restaurant4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i2"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/address" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rest_address"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i3"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/buildings" />

                        <TextView
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rest_city"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i4"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/state" />

                        <TextView
                            android:id="@+id/state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rest_state"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i5"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/radar" />

                        <TextView
                            android:id="@+id/area"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rest_area"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i6"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/mail" />

                        <TextView
                            android:id="@+id/postalcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/rest_postalcode"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i7"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/world" />

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/rest_country"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/i8"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/price" />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rest_price"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/reserve_url"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="15dp"
                            app:layout_constraintEnd_toStartOf="@+id/guideline_fav"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/www" />


                        <ImageView
                            android:id="@+id/mobile_reserve"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="15dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/guideline_fav"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/seo" />

                        <ImageButton
                            android:id="@+id/call_the_place"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/telephone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/guideline_fav"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageButton
                            android:id="@+id/view_location_map"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/map"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/guideline_fav" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>